--- a/src/main/resources/concepts.html
+++ b/src/main/resources/concepts.html
@@ -3,6 +3,10 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>Web Development App</title>
+    <link rel="stylesheet" href="css/print.css">
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/vertical.css">
+    <!--<link rel="stylesheet" href="css/horizontal.css">-->
   </head>
   <body>
     <header>
