--- a/src/main/resources/users.html
+++ b/src/main/resources/users.html
@@ -3,6 +3,11 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/print.css">
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/vertical.css">
+    <!--<link rel="stylesheet" href="css/horizontal.css">-->
     <title>Users Practice</title>
   </head>
   <body>
